Fix various startup issues related to jetty 12, hibernate 7, JNDI. Disable myfaces for now. Split openapi to seperate web app.