@@ -78,7 +78,7 @@ public class PSLargeRequestQueueError extends PSLogError {
      *    [1] = m_size
      * to format the the submessage text
      */
-    Object[] args = {m_sessId, new Integer(m_size)};
+    Object[] args = {m_sessId, Integer.valueOf(m_size)};
     msgs[0] =
         new PSLogSubMessage(
             IPSServerErrors.REQUEST_QUEUE_FULL,
